# Discord-Bot

./: .cache  .cache-xzxtecn4384hqvazcdhvjeoij  SECURITY.md  keep_alive.py  main.py  pyproject.toml
.gitignore/: config.cfg
cogs/: 1utils.py  2actions.py  3fun.py  4currency.py  actions.py  currency.py  fun.py  music.py  utils.py
datafiles/: daily.txt  data.txt  onmessage.json  prefixes.json
