[tool.poetry]
name = "repl_python3_Discord-Bot"
version = "3.2.0"
description = "I.... have no idea"
authors = ["Avaneesh Shetye"]

[tool.poetry.dependencies]
python = "^3.8"
nest-asyncio = "1.5.1"
flask = "^2.0.1"
opencv-python = "4.5.2.54"
pypokedex = "1.6.0"
youtube-dl = "2021.6.6"
discord = "1.0.1"
wikipedia = "1.4.0"
pycountry = "20.7.3"
python-dotenv = "^0.17.1"
xkcd = "2.4.2"
imageio = "2.9.0"
chardet = "3.0.4"
soupsieve = "2.2.1"
urllib3 = "1.26.4"
replit = "^3.1.0"
beautifulsoup4 = "^4.9.3"
PyNaCl = "^1.4.0"
typing-extensions = "^3.10.0"
"discord.py" = "^1.7.3"
lavalink = "^3.1.4"
spotipy = "^2.19.0"
lyricsgenius = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
